themes/dnd/assets/css/main.css
/* File for top-level html and reused variables */

:root {
    --logo-font: CinzelDecorative;
    --dd-serif-font: Caudex;
    --dd-sans-font: Lato;
    --bg-main: rgb(46, 37, 30);
    --bg-dark: rgb(33, 30, 25);
    --banner-grad: linear-gradient(
        180deg,
        rgba(119, 43, 43, 1) 0%,
        rgba(109, 33, 33, 1) 39%,
        rgba(89, 13, 13, 1) 100%
    );
    --accent-col: rgb(238, 206, 145);
    --seondary-accent-col: rgb(33, 152, 212);
    --foreground-color: #dddddd;
}

body {
    margin: 0;
    background-color: var(--bg-main);
    color: var(--foreground-color);
    font-size: larger;
    font-family: Lato;
    display: flex;
    flex-direction: column;
    min-height: 100vh;
}

/* Header Styles */
.header {
    background: var(--banner-grad);
    color: #fff;
    padding: 20px;
    text-align: center;
    width: 100%;
    font-family: var(--dd-serif-font);
    color: var(--accent-col);
}

.header > h1 {
    font-size: 250%;
    font-family: var(--logo-font);
}

.small_header {
    padding-left: 1em;
    padding-top: 0.5em;
    padding-bottom: 0.5em;
    color: var(--accent-col);
    background: var(--banner-grad);
    font-family: var(--dd-serif-font);
    position: sticky;
    top: 0;
    width: 100%;
    z-index: 1000;
}

.centered-container {
    display: flex;
    flex-direction: column;
    align-items: center;
    flex-grow: 1;
}

.toc-content-container {
    display: flex;
    flex-direction: row;
    flex-grow: 1;
}

/* Main Content Styles */
.main-content {
    padding: 2em;
    max-width: 800px;
    flex-grow: 1;
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
    margin-bottom: 300px;
    line-height: 1.6;
}

.rhs-main-content {
    max-width: 800px;
    flex-grow: 1;
    background-color: var(--bg-main);
    padding-left: 4em;
    padding-right: 4em;
    padding-top: 1em;
    padding-bottom: 4em;
    line-height: 1.6;
    margin-bottom: 300px;
}

.sidebar {
    flex-shrink: 1;
    width: 300px;
    padding-top: 1em;
    padding-right: 1em;
    background-color: var(--bg-dark);
}

.toc_container {
    position: sticky;
    top: 100px;
}

.logo_link {
    font-size: 160%;
    margin-right: 1em;
    -webkit-text-stroke: 0.5px black;
    font-family: var(--logo-font);
    color: var(--accent-col);
}

.nav {
    height: 100%;
    vertical-align: center;
    position: relative;
    top: -2px;
}

.nav a {
    color: var(--accent-col);
    margin-right: 1em;
}

#TableOfContents ul {
    font-family: var(--dd-serif-font);
    list-style-type: disc;
    color: var(--accent-col);
}

#TableOfContents ul li {
    padding-top: 10px;
}

#TableOfContents ul li a {
    font-family: var(--dd-serif-font);
    color: var(--accent-col);
    text-decoration: none;
}

#home_nav {
    display: flex;
    justify-content: center;
    margin-bottom: 1.5em;
}

#home_nav ul {
    list-style-type: none;
    margin: 0;
    padding: 0;
    overflow: hidden;
    font-family: var(--dd-serif-font);
}

#home_nav ul li {
    float: left;
}

#home_nav ul li a {
    display: block;
    text-align: center;
    padding-right: 1em;
    text-decoration: none;
    color: var(--accent-col);
}

/* Mobile-specific style */
@media only screen and (max-width: 768px) {
    body {
        font-size: small;
    }
    .sidebar {
        display: none;
    }

    .rhs-main-content {
        padding: 2em;
    }

    .logo_link {
        font-size: 100%;
        -webkit-text-stroke: 0;
    }

    .nav {
        font-size: 80%;
    }

    h1 {
        font-size: 1rem;
    }
    h2 {
        font-size: 0.9rem;
    }
    h3 {
        font-size: 0.8rem;
    }
    h4 {
        font-size: 0.7rem;
    }
    h5 {
        font-size: 0.68rem;
    }
    h6 {
        font-size: 0.65rem;
    }

    .header > h1 {
        font-size: 1.5rem;
    }

    pre {
        font-size: 0.5rem;
    }

    mjx-container mjx-math * {
        font-size: 0.6rem;
    }

    figure img {
        max-width: 80%;
    }
}

.main-content > h1,
.main-content > h2,
.main-content > h3,
.main-content > h4,
.main-content > h5,
.main-content > h6 {
    margin: 0 auto 20px 0;
}

.main-content > a {
    margin: 0 auto 20px 0;
}

.main-content > p {
    margin: 0 auto 20px 0;
}

a {
    color: var(--seondary-accent-col);
    text-decoration: none;
}

.post_link {
    color: var(--accent-col);
}

